0.0.1.12 Validation-enabled DTOs instead of entities for the API. Tests updated.